--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="home-content">
             <h1>Hi, I'm <span>G Praveen Reddy</span><span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
-                <h3>Machine Learning Engineer</h3>
+                <h3> Software Engineer</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
             <p>I am a committed, confident, and quick learner with an insatiable curiosity for acquiring new skills. With a robust background in machine learning, data analytics, and algorithmic design, I am enthusiastic about applying my expertise to solve intricate problems. My enthusiasm is centered around contributing to a professional organization with steadfast dedication, hard work, and reliability, utilizing my capabilities to create pioneering and influential machine learning solutions.
